【修改】添加日志【songkaojun】